--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/react-dom": "^18.2.19",
     "eslint": "^7.32.0",
     "gh-pages": "^6.1.1",
-    "sass": "^1.72.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "sass": "^1.72.0"
   }
 }
